--- a/css/styles.css
+++ b/css/styles.css
@@ -60,10 +60,12 @@
     padding: 3% 3%;
 }
 .img1 {
-    width: 49%;
+    width: 47%;
     float: right;
     border: 1px solid black;
     margin-bottom: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 .text {
     margin-left: 10px;
